--- a/targets/rp2040/Cargo.toml
+++ b/targets/rp2040/Cargo.toml
@@ -4,4 +4,6 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-hal = { path = "../../hal", features = ["target-rp2040"], default-features = false }
+hal = { path = "../../hal", features = [
+  "target-rp2040",
+], default-features = false }
