--- a/targets/stm32h743/Cargo.toml
+++ b/targets/stm32h743/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+embassy-executor = { workspace = true }
 hal = { path = "../../hal", features = [
   "target-stm32h743",
 ], default-features = false }
