--- a/targets/stm32h743/.cargo/config.toml
+++ b/targets/stm32h743/.cargo/config.toml
@@ -1,2 +1,5 @@
 [build]
 target = "thumbv7em-none-eabihf"
+
+[target.'cfg(all(target_arch = "arm", target_os = "none"))']
+runner = "probe-rs run --chip STM32H743VITx"
